planar: add IsPlanarDigraph and related

--- a/.gitignore
+++ b/.gitignore
@@ -1,80 +1,62 @@
 *.DS_Store
 *.Plo
+*.Tpo
 *.aux
 *.bbl
 *.blg
 *.brf
 *.digraphs
 *.g6
+*.gcda
+*.gcno
+*.guess
 *.gz
 *.html
 *.idx
 *.ilg
 *.ind
+*.la
+*.lab
 *.lo
 *.log
 *.o
-*.orig
 *.out
 *.pdf
 *.pnr
 *.pyc
 *.six
+*.status
+*.sub
 *.swp
 *.synctex.gz
+*.tex
 *.tex
 *.toc
 *.top
 *.tui
 *.txt
-.libs/digraphs.la
-.libs/digraphs.lai
-.libs/**/digraphs.so
-.libs/graphs.la
-.libs/graphs.lai
-.libs/graphs.so
+.dirstamp
+.libs/*
 Makefile
 Makefile.in
-Transitions*
 aclocal.m4
 autom4te.*
 bin/*
-cnf/ar-lib
-cnf/compile
-cnf/config.guess
-cnf/config.sub
-cnf/depcomp
-cnf/install-sh
-cnf/ltmain.sh
-cnf/missing
-cnf/pkgconfig.h.in
-config.status
+cnf/*
 configure
+digraphs-config.h
 digraphs-lib
-digraphs.la
-digraphs.tex
-digraphs_dev.tex
-digraphs_la-homos.Tpo
-digraphs_la-schreier-sims.Tpo
-graphs.la
+gh-pages/
 libtool
-m4/libtool.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
-mt-cc.py
-pkgconfig.h.in~
-release-checklist.tst
-src/.deps/.dirstamp
-src/.deps/digraphs_la-digraphs.Plo
-src/.deps/digraphs_la-digraphs.Tpo
-src/.dirstamp
-src/.libs/digraphs_la-digraphs.o
-src/bliss-0.72/.deps/.dirstamp
-src/bliss-0.72/.dirstamp
-src/digraphs_la-digraphs.lo
+ltmain.sh
+m4/*
+planarity
+src/.deps/*
+src/.libs/*
 src/_pkgconfig.h
+src/edge-addition-planarity-suite-Version_3.0.0.5/.libs
+src/edge-addition-planarity-suite-Version_3.0.0.5/c/.deps
+src/edge-addition-planarity-suite-Version_3.0.0.5/m4
 src/stamp-h1
 tags
 tst/out/*
