--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,6 +1,6 @@
 name: Digraphs
-version: 0.14.0
-date: 2018-11-23
+version: 0.15.0
+date: 2019-02-15
 description: |
     Graphs, digraphs, and multidigraphs in GAP
 
@@ -25,6 +25,8 @@ contributors:
       url: mailto:sb235@st-andrews.ac.uk
     - name: Luke Elliott
       url: mailto:le27@st-andrews.ac.uk
+    - name: Max Horn
+      url: https://www.quendi.de/math
     - name: Christopher Jefferson
       url: http://caj.host.cs.st-andrews.ac.uk
     - name: Markus Pfeiffer
@@ -33,6 +35,8 @@ contributors:
       url: mailto:cr66@st-andrews.ac.uk
     - name: Finn Smith
       url: mailto:fls3@st-andrews.ac.uk
+    - name: Murray Whyte
+      url: mailto:mw231@st-andrews.ac.uk
 
 GAP: ">=4.9.0"
 
@@ -61,7 +65,7 @@ packageinfo: https://gap-packages.github.io/Digraphs/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-packages/Digraphs/releases/download/v0.14.0/digraphs-0.14.0.tar.gz
+      url: https://github.com/gap-packages/Digraphs/releases/download/v0.15.0/digraphs-0.15.0.tar.gz
 
 abstract: |
     The <b>Digraphs</b> package is a <b>GAP</b> package for digraphs and multidigraphs.
