--- a/configure.ac
+++ b/configure.ac
@@ -115,6 +115,7 @@ AC_DEFUN([CHECK_COMPILER_BUILTIN],
         )])
 
 CHECK_COMPILER_BUILTIN([__builtin_ctzll],[0]);
+CHECK_COMPILER_BUILTIN([__builtin_popcountl],[0]);
 
 dnl ##
 dnl ## Output everything
