gh-pages: add WAW as maintainer

--- a/_data/package.yml
+++ b/_data/package.yml
@@ -19,6 +19,8 @@ authors:
 maintainers:
     - name: James Mitchell
       url: http://goo.gl/ZtViV6
+    - name: Wilf Wilson
+      url: http://wilf.me
 
 contributors:
     - name: Stuart Burrell
