--- a/.travis.yml
+++ b/.travis.yml
@@ -81,25 +81,24 @@ matrix:
       - THRESHOLD=98
     
     - env:
-      - SUITE=external-planarity
+      - SUITE=external
       - ABI=64
       - GAP=stable-4.10
       - PACKAGES=required
-      - EXTRA_PKG_FLAGS="--with-external-planarity"
+      - EXTRA_PKG_FLAGS="--with-external-planarity --with-external-bliss"
       - LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$HOME/miniconda3/lib
       - CFLAGS="$CFLAGS -I$HOME/miniconda3/include -O2 -g"
       - LDFLAGS="$LDFLAGS -L$HOME/miniconda3/lib"
 
 before_install:
-  - if [ "$SUITE" == "external-planarity" ]; then
+  - if [ "$SUITE" == "external" ]; then
       wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
       chmod +x miniconda.sh;
       ./miniconda.sh -b;
       export PATH=/home/travis/miniconda3/bin:$PATH;
       conda update --yes conda;
       conda config --add channels conda-forge;
-      conda install --yes planarity;
-      conda install --yes readline;
+      conda install --yes planarity bliss readline;
     fi;
 
 install:
