--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,6 +1,6 @@
 name: Digraphs
-version: 0.15.3
-date: 2019-06-12
+version: 0.15.4
+date: 2019-08-06
 description: |
     Graphs, digraphs, and multidigraphs in GAP
 
@@ -19,6 +19,8 @@ authors:
 maintainers:
     - name: James Mitchell
       url: http://goo.gl/ZtViV6
+    - name: Wilf Wilson
+      url: http://wilf.me
 
 contributors:
     - name: Stuart Burrell
@@ -65,7 +67,7 @@ packageinfo: https://gap-packages.github.io/Digraphs/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-packages/Digraphs/releases/download/v0.15.3/digraphs-0.15.3.tar.gz
+      url: https://github.com/gap-packages/Digraphs/releases/download/v0.15.4/digraphs-0.15.4.tar.gz
 
 abstract: |
     The <b>Digraphs</b> package is a <b>GAP</b> package for digraphs and multidigraphs.
