--- a/configure.ac
+++ b/configure.ac
@@ -9,7 +9,7 @@ dnl ##
 dnl ## Setup autoconf
 dnl ##
 AC_PREREQ([2.68])
-AC_INIT([digraphs], m4_esyscmd([tr -d '\n' < VERSION]))
+AC_INIT([digraphs], m4_esyscmd([tr -d '\n' < .VERSION]))
 AC_CONFIG_SRCDIR([src/digraphs.c])
 AC_CONFIG_HEADER([src/_pkgconfig.h:cnf/pkgconfig.h.in])
 AC_CONFIG_MACRO_DIR([m4])
