--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,10 @@ matrix:
       - ABI=64
       - GAP=stable-4.11
       - PACKAGES=required
-      - EXTRA_PKG_FLAGS="--with-external-planarity --with-external-bliss --without-intrinsics"
       - LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$HOME/miniconda3/lib
-      - CFLAGS="$CFLAGS -I$HOME/miniconda3/include -O2 -g"
-      - LDFLAGS="$LDFLAGS -L$HOME/miniconda3/lib"
+      - CFLAGS=$CFLAGS -I$HOME/miniconda3/include -O2 -g
+      - LDFLAGS=$LDFLAGS -L$HOME/miniconda3/lib
+      - EXTRA_PKG_FLAGS=--with-external-planarity --with-external-bliss --without-intrinsics
 
     - env:
       - SUITE=test
