--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,6 +1,6 @@
 name: Digraphs
-version: 1.1.2
-date: 2020-03-16
+version: 1.2.0
+date: 2020-03-27
 description: |
     Graphs, digraphs, and multidigraphs in GAP
 
@@ -13,6 +13,8 @@ authors:
       url: http://www-groups.mcs.st-andrews.ac.uk/~jamesm
     - name: Michael Torpey
       url: https://mtorpey.github.io
+    - name: Maria Tsalakou
+      url: https://mariatsalakou.github.io/
     - name: Wilf Wilson
       url: http://wilf.me
 
@@ -51,6 +53,9 @@ needed-pkgs:
     - name: "orb"
       version: ">=4.8.2"
       url: "https://gap-packages.github.io/orb"
+    - name: "datastructures"
+      version: ">=0.2.5"
+      url: "https://gap-packages.github.io/datastructures"
 
 suggested-pkgs:
     - name: "gapdoc"
@@ -69,7 +74,7 @@ packageinfo: https://gap-packages.github.io/Digraphs/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-packages/Digraphs/releases/download/v1.1.2/digraphs-1.1.2.tar.gz
+      url: https://github.com/gap-packages/Digraphs/releases/download/v1.2.0/digraphs-1.2.0.tar.gz
 
 abstract: |
     The <b>Digraphs</b> package is a <b>GAP</b> package for digraphs and multidigraphs.
