--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ jobs:
       - ABI=64
       - GAP=stable-4.11
       - PACKAGES=required
+      - EXTREME=no
       - EXTRA_PKG_FLAGS="--with-external-planarity --with-external-bliss --without-intrinsics"
       - LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$HOME/miniconda3/lib
       - CFLAGS="$CFLAGS -I$HOME/miniconda3/include -O2 -g"
@@ -47,7 +48,7 @@ jobs:
       - ABI=64
       - GAP=required
       - PACKAGES=required
-    
+
     - env:
       - SUITE=test
       - ABI=32
