--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,6 +1,6 @@
 name: Digraphs
-version: 1.2.1
-date: 2020-05-27
+version: 1.3.0
+date: 2020-06-27
 description: |
     Graphs, digraphs, and multidigraphs in GAP
 
@@ -10,7 +10,7 @@ authors:
     - name: Julius Jonusas
       url: http://julius.jonusas.work
     - name: James Mitchell
-      url: http://www-groups.mcs.st-andrews.ac.uk/~jamesm
+      url: https://jdbm.me
     - name: Michael Torpey
       url: https://mtorpey.github.io
     - name: Maria Tsalakou
@@ -20,7 +20,7 @@ authors:
 
 maintainers:
     - name: James Mitchell
-      url: http://www-groups.mcs.st-andrews.ac.uk/~jamesm
+      url: https://jdbm.me
     - name: Wilf Wilson
       url: http://wilf.me
 
@@ -74,7 +74,7 @@ packageinfo: https://gap-packages.github.io/Digraphs/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-packages/Digraphs/releases/download/v1.2.1/digraphs-1.2.1.tar.gz
+      url: https://github.com/gap-packages/Digraphs/releases/download/v1.3.0/digraphs-1.3.0.tar.gz
 
 abstract: |
     The <b>Digraphs</b> package is a <b>GAP</b> package for digraphs and multidigraphs.
