--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,10 @@
 # set clone depth
 clone_depth: 1                  # clone entire repository history if not defined
 
+branches:
+  except:
+    - /rc-v\d+\.\d+\.\d+/
+
 environment:
   TEST_SUITE: test
   PACKAGES: "latest"
