--- a/.github/workflows/GAP.yml
+++ b/.github/workflows/GAP.yml
@@ -2,8 +2,10 @@ name: "GAP tests"
 
 # Trigger the workflow on push or pull request
 on:
-  - push
-  - pull_request
+  pull_request:
+  push:
+    branches-ignore:
+      - rc-v[0-9]+.[0-9]+.[0-9]+
 
 jobs:
   test:
