--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,9 @@
 name: CI
-on: [pull_request]
+on:
+  pull_request:
+  push:
+    branches-ignore:
+      - rc-v[0-9]+.[0-9]+.[0-9]+
 
 jobs:
    lint:
