--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: "Install dependencies . . ."
-        run: |
-          sudo pip install gaplint cpplint
-      - name: "Run gaplint + cpplint . . ."
+        name: "Check out the repository"
+      - uses: actions/setup-python@v1
+        name: "Set up Python"
+      - uses: BSFishy/pip-action@v1
+        name: "Install gaplint and cpplint with pip"
+        with:
+          packages: |
+            gaplint
+            cpplint
+      - name: "Run gaplint + cpplint"
         run: bash etc/lint.sh
   test:
     name: "GAP ${{ matrix.gap-branch }}"
