--- a/.codecov.yml
+++ b/.codecov.yml
@@ -2,14 +2,20 @@ coverage:
   precision: 2      # Report coverage to 2 decimal places
   round: down       # Round down
   range: "90...100" # Anything below 90% is coloured red (considered bad)
-  status:           # Various customisations that it seems should be off
-    project: off
-    patch: off
-    changes: off
 
-comment:
-  layout: "header, diff, changes, tree"
-  behavior: default
+  status: # GitHub status checks to add to a PR
+    project:
+      default:
+        informational: true
+    patch:
+      default:
+        informational: true
+    changes:
+      default:
+        informational: true
+
+# Comment to post on PRs
+comment: false
 
 ignore:
  - "extern/"
