--- a/.codecov.yml
+++ b/.codecov.yml
@@ -4,15 +4,17 @@ coverage:
   range: "90...100" # Anything below 90% is coloured red (considered bad)
 
   status: # GitHub status checks to add to a PR
-    project:
+    project: # Check all of Digraphs
       default:
-        informational: true
-    patch:
+        informational: true # Don't fail the check if overall coverage decreases
+    patch: # Check only the PR's diff
       default:
-        informational: true
-    changes:
+        target: 100
+        threshold: 0
+        informational: false # Do fail the check if the diff is not 100% covered
+    changes: # Information about changes in coverage outside the diff
       default:
-        informational: true
+        informational: true # Don't fail the check
 
 # Comment to post on PRs
 comment: false
