Windows CI: replace AppVeyor by GitHub Actions

--- a/.github/workflows/gap.yml
+++ b/.github/workflows/gap.yml
@@ -83,3 +83,22 @@ jobs:
         if: ${{ always() }}
       - uses: codecov/codecov-action@v2
         if: ${{ always() }}
+
+  test-cygwin:
+    name: "cygwin / GAP master"
+    runs-on: windows-latest
+    if: ${{ !(github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository) }}
+    env:
+      CHERE_INVOKING: 1
+    steps:
+      - uses: actions/checkout@v2
+      - uses: gap-actions/setup-cygwin@v1
+      - uses: gap-actions/setup-gap@cygwin-v2
+        with:
+          GAP_PKGS_TO_BUILD: "io orb profiling grape datastructures"
+      - uses: gap-actions/build-pkg@cygwin-v1
+      - name: "Install digraphs-lib"
+        run: |
+          curl --retry 5 -L -O "https://digraphs.github.io/Digraphs/${{ env.DIGRAPHS_LIB }}.tar.gz"
+          tar xf "${{ env.DIGRAPHS_LIB }}.tar.gz"
+      - uses: gap-actions/run-pkg-tests@cygwin-v2
