--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,11 @@
 name: "linting"
-on: [push, pull_request]
+on:
+  workflow_dispatch:
+  pull_request:
+  push:
+  schedule:
+    # Every day at 3:30 AM UTC
+    - cron: '30 3 * * *'
 
 jobs:
   lint:
