--- a/.github/workflows/gap.yml
+++ b/.github/workflows/gap.yml
@@ -34,19 +34,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: "Install TeX Live"
-        if: ${{ matrix.gap-branch == 'master' }}
-        run: |
-          packages=(
-            texlive-latex-base
-            texlive-latex-recommended
-            texlive-latex-extra
-            texlive-extra-utils
-            texlive-fonts-recommended
-            texlive-fonts-extra
-          )
-          sudo apt-get update
-          sudo apt-get install "${packages[@]}"
       - name: "Install GAP and clone/compile necessary packages"
         uses: gap-actions/setup-gap@v2
         with:
@@ -61,11 +48,33 @@ jobs:
           tar xf "${{ env.DIGRAPHS_LIB }}.tar.gz"
       - name: "Run tst/testall.g"
         uses: gap-actions/run-pkg-tests@v2
+      - uses: gap-actions/process-coverage@v2
+      - uses: codecov/codecov-action@v1
+
+  manual:
+    name: "Compile and upload manual"
+    runs-on: ubuntu-latest
+    if: ${{ !(github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository) }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: "Install TeX Live"
+        run: |
+          packages=(
+            texlive-latex-base
+            texlive-latex-recommended
+            texlive-latex-extra
+            texlive-extra-utils
+            texlive-fonts-recommended
+            texlive-fonts-extra
+          )
+          sudo apt-get update
+          sudo apt-get install "${packages[@]}"
+      - uses: gap-actions/setup-gap@v2
+        with:
+          GAP_PKGS_TO_BUILD: ''
       - uses: gap-actions/build-pkg-docs@v1
-        if: ${{ matrix.gap-branch == 'master' }}
       - name: "Upload compiled manuals"
         uses: actions/upload-artifact@v2
-        if: ${{ matrix.gap-branch == 'master' }}
         with:
           name: "Digraphs manual"
           path: |
@@ -73,5 +82,3 @@ jobs:
             doc/*.html
             doc/*.css
             doc/*.js
-      - uses: gap-actions/process-coverage@v2
-      - uses: codecov/codecov-action@v1
