--- a/.github/workflows/gap.yml
+++ b/.github/workflows/gap.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   test-unix:
-    name: "${{ matrix.os }} / GAP ${{ matrix.gap-branch }}"
+    name: "${{ matrix.os }}${{ matrix.ABI }} / GAP ${{ matrix.gap-branch }}"
     runs-on: "${{ matrix.os }}-latest"
     # Don't run this twice for PRs from branches in the same repository
     if: ${{ !(github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository) }}
@@ -26,6 +26,7 @@ jobs:
           - stable-4.11
         pkgs-to-clone:
           - NautyTracesInterface
+        ABI: ['']
 
         include:
           - gap-branch: stable-4.10
@@ -34,6 +35,9 @@ jobs:
           - gap-branch: master
             pkgs-to-clone: "datastructures NautyTracesInterface"
             os: macos
+          - gap-branch: master
+            os: ubuntu
+            ABI: 32
 
     steps:
       - uses: actions/checkout@v2
@@ -46,8 +50,11 @@ jobs:
           GAP_PKGS_TO_CLONE: "${{ matrix.pkgs-to-clone }}"
           GAP_PKGS_TO_BUILD: "io orb profiling grape NautyTracesInterface datastructures"
           GAPBRANCH: ${{ matrix.gap-branch }}
+          ABI: ${{ matrix.ABI }}
       - name: "Build Digraphs"
         uses: gap-actions/build-pkg@v1
+        with:
+          ABI: ${{ matrix.ABI }}
       - name: "Install digraphs-lib"
         run: |
           curl --retry 5 -L -O "https://digraphs.github.io/Digraphs/${{ env.DIGRAPHS_LIB }}.tar.gz"
