--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,15 +13,16 @@ variables:
     DIGRAPHS_LIB: digraphs-lib-0.6
 
 jobs:
-- job: ABI_64_GAP_master_PACKAGES_latest
-  variables:
-    SUITE: test
-    ABI: 64
-    GAP_VERSION: master
-    PACKAGES: latest
-  steps:
-  - script: ci/azure-gap.sh
-    displayName: 'Running the Digraphs package for GAP tests in docker container. . .'
+# TODO reinstate when this Docker container works again/we have a replacement
+#- job: ABI_64_GAP_master_PACKAGES_latest
+#  variables:
+#    SUITE: test
+#    ABI: 64
+#    GAP_VERSION: master
+#    PACKAGES: latest
+#  steps:
+#  - script: ci/azure-gap.sh
+#    displayName: 'Running the Digraphs package for GAP tests in docker container. . .'
 # TODO there isn't a GAP master 32 docker container yet
 # - job: ABI_32_GAP_master_PACKAGES_latest
 #   variables:
